src/test/deca/context/valid/return-simpleExample.deca
class A {
    int method(int a){
        a = 3;
        return a;
    }
}