src/test/deca/context/invalid/while-assignNotBoolean.deca
{
    int b;
    while (b = 5+8) {
    }
}